--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                                             <!-- /.offer_slider_fourth_wrap_contact_btn_1 -->
                                             <button class="offer_slider_fourth_wrap_contact_btn_2" id="button_2"></button>
                                             <!-- /.offer_slider_fourth_wrap_contact_btn_2 -->
-                                            <button class="offer_slider_fourth_wrap_contact_btn_3" id="button_3">Contact Us</button>
+                                            <button class="offer_slider_fourth_wrap_contact_btn_3" id="button_3">Contact Me</button>
                                             <!-- /.offer_slider_fourth_wrap_contact_btn_3 -->
                                         </div>
                                         <!-- /.offer_slider_fourth_wrap_contact_buttons -->
