--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                     <div id = "of_feature" class="offer_slider_first_footer_feature">
                                         <p class="offer_slider_first_footer_feature_title" >TRADING</p>
                                         <!-- /.offer_slider_first_footer_feature_title -->
-                                        <p class="offer_slider_first_footer_feature_subtitle" >Everything, which is related, <br>with financial market and fomation</p>
+                                        <p class="offer_slider_first_footer_feature_subtitle" >Everything, which is related, <br>with financial market and fiduciary</p>
                                         <!-- /.offer_slider_first_footer_feature_subtitle -->
                                     </div>
                                     <!-- /.offer_slider_first_footer_feature -->
@@ -532,7 +532,7 @@
                         </div>
                         <div class="of_5">
                             <div class="offer_slider_firth_wrap">
-                                <h2 class="offer_slider_firth_wrap_title">I'm acquainted in these an realms </h2>
+                                <h2 class="offer_slider_firth_wrap_title">I'm acquainted in these realms </h2>
                                 <!-- /.offer_slider_firth_wrap_title -->
                                 <div class="offer_slider_firth_wrap_content">
                                     <div class="offer_slider_firth_wrap_block_first_buttons">
