--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                                         <img src="img/victory.png" alt="" class="offer_slider_second_wrap_slick_feature_img" style="transform: scale(0.5);  width: 330px; height: 330px" >
                                                 </div>
                                         <div class="offer_slider_second_wrap_slick_feature_description">
-                                            <p class="offer_slider_wrap_slick_feature_title">MATH & CALCULATE</p>
+                                            <p class="offer_slider_wrap_slick_feature_title">MATH & SCIENCE</p>
                                             <!-- /.offer_slider_wrap_slick_features_title -->
                                             <p class="offer_slider_wrap_slick_feature_subtitle">The most fascinating <br> science in the whole world</p>
                                             <!-- /.offer_slider_wrap_slick_features_subtitle -->
